--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,4 @@
-# streamlit
-# pandas
-# langchain
-# openai==0.28
-# python-dotenv
-# google-generativeai
-# matplotlib
-# requests
-# plotly
-# python-dateutil
+langdetect
 streamlit>=1.28.0
 pandas>=2.0.0
 numpy>=1.24.0
@@ -26,8 +17,7 @@ scikit-learn>=1.3.0
 pytest>=7.4.0
 black>=23.7.0
 flake8>=6.0.0
-
-
+spacy
 streamlit>=1.28.0
 pandas>=2.0.0
 numpy>=1.24.0
